--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     canvas { width: 100%; height: 100% }
   </style>
 
-  <!--  Three.js CDN  -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.min.js" integrity="sha512-U4J4PbEJ2TMjFqPUSiKq7LLTHuEkPZVo0jl2fomi9pT7UAExh4xVi8KmoR7EfmyigH95aA68zpW7y3XzuoSurQ==" crossorigin="anonymous"></script>
 </head>
 
 <body>
