--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Three.js 101</title>
+  <title>WASM climate model!</title>
 
   <!--  Simple reset to delete the margins  -->
   <style>
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <!--  Our code  -->
+  <script src="colormaps.js"></script>
   <script src="app.js"></script>
 </body>
 
