--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     canvas { width: 100%; height: 100% }
   </style>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.min.js" integrity="sha512-U4J4PbEJ2TMjFqPUSiKq7LLTHuEkPZVo0jl2fomi9pT7UAExh4xVi8KmoR7EfmyigH95aA68zpW7y3XzuoSurQ==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/16/Stats.min.js" integrity="sha512-by6gRzSfA6HGshqED4Jnc6n/jJ9ojBvjbEbCvsrLzErlIiWswh1qYfYnvSzZg8SmbqVCk/v0XwlpGzJxIDPILw==" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/three@0.127.0/build/three.min.js"></script>
+  <script src="https://unpkg.com/three@0.127.0/examples/js/libs/stats.min.js"></script>
+  <script src="https://unpkg.com/three@0.127.0/examples/js/controls/OrbitControls.js"></script>
 </head>
 
 <body>
