--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <script src="https://unpkg.com/three@0.127.0/build/three.min.js"></script>
   <script src="https://unpkg.com/three@0.127.0/examples/js/libs/stats.min.js"></script>
   <script src="https://unpkg.com/three@0.127.0/examples/js/controls/OrbitControls.js"></script>
+
+  <script src="https://unpkg.com/dat.gui@0.7.7/build/dat.gui.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/dat.gui@0.7.7/build/dat.gui.css">
 </head>
 
 <body>
